mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_condvar_wait_wrong_arg_type.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Type mismatch: expected Mutex, got RwLock
--> test_scripts/error_cases/semantic_condvar_wait_wrong_arg_type.mux:6:1
   |
 6 | cv.wait(rw)
   | ^^^^^^^
